src/objects/zoom_app__Zoom_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to save common ORG wide settings related to Zoom App.</description>
    <fields>
        <fullName>zoom_app__Enable_Editable_Contact_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Editable Contact/Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Mail_Default_From_Address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Select one of Org Wide Email Addresses, All Meeting Invitation Email Will take this as Outbound Email Address. Please make sure the Org Wide Email addresses is validated</inlineHelpText>
        <label>Mail Default From Address</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zoom_app__Phone_Auto_Save_Call_Logs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phone - Auto Save Call Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__ZoomPhoneCallLogConfigExt0__c</fullName>
        <label>ZoomPhoneCallLogConfigExt0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__ZoomPhoneCallLogConfigExt1__c</fullName>
        <label>ZoomPhoneCallLogConfigExt1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__ZoomPhoneCallLogConfigExt2__c</fullName>
        <label>ZoomPhoneCallLogConfigExt2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zoom Configuration</label>
</CustomObject>